<resources>
    <string name="app_name">Inventory Management Project</string>

    <string name="login">Giriş yap</string>
    <string name="email">E-Posta</string>
    <string name="password">Şifre</string>
    <string name="forgot_password">Şifremi unuttum</string>
    <string name="enter_password">Şifrenizi Giriniz</string>
    <string name="enter_email">E-Postanızı Giriniz</string>
    <string name="name_surname">İsim Soyisim</string>
    <string name="department_profile">Birim:</string>
    <string name="email_profile">E-Posta:</string>
    <string name="profile">Profil</string>
    <string name="logout">Çıkış Yap</string>
    <string name="create_user">Kullanıcı\nOluştur</string>
    <string name="welcome">Hoş Geldin,</string>
    <string name="create_user_title">Kullanıcı Oluştur</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="department">Birim</string>
    <string name="is_admin">Admin Yetkisi</string>
    <string name="admin">Admin</string>
    <string name="create_user_button_text">Kullanıcı Oluştur</string>
    <string name="add_item">Ürün Ekle</string>
    <string name="remove_item">Ürün Kaldır</string>
    <string name="item_photo">Ürün Fotoğrafı</string>
    <string name="open_camera">Kamerayı Aç</string>
    <string name="item_title">Ürün Başlığı</string>
    <string name="item_explanation">Ürün Açıklaması</string>
    <string name="item_features">Ürün Özellikleri</string>
    <string name="item_barcode">Ürün Barkodu</string>
    <string name="item_tags">Ürün Etiketleri</string>
    <string name="default_barcode_value">000000000000</string>
    <string name="item_count">Ürün Adedi</string>
    <string name="search_item_searchbar_text">Ürün Ara …</string>
    <string name="product_detatils">Ürün Detayları</string>
    <string name="stock">Stok: </string>
    <string name="features">Özellikler</string>
    <string name="office_item">Ofis Malzemesi</string>
    <string name="computer_part">Bilgisayar Bileşeni</string>
    <string name="clothing_item">Giyim Malzemesi</string>
    <string name="license">Lisans</string>
    <string name="electronic">Elektronik</string>
    <string name="computer">Bilgisayar</string>
    <string name="furniture">Mobilya</string>
    <string name="kitchen_tools">Mutfak Aracı</string>
    <string name="decore">Dekor</string>
    <string name="request_form">Ürün Talep Et</string>
    <string name="request_details">Talep Gerekçesi</string>
    <string name="request_urgency">Talep Önemi</string>
    <string name="request_urgency_tip">1 (Düşük) - 5 (Yüksek)</string>
    <string name="request_count">Talep Adedi</string>
    <string name="request_id">Request ID:</string>
    <string name="request_date">Talep Tarihi:</string>
    <string name="request_state">Durum:</string>
    <string name="request_owner">Talep Sahibi:</string>
    <string name="request_owner_with_colon">Talep Gerekçesi:</string>
    <string name="request_urgency_with_colon">Talep Önemi:</string>
    <string name="request_count_with_colon">Talep Adedi:</string>
    <string name="item_count_with_colon">Ürün Adedi:</string>
    <string name="x_value">X</string>
    <string name="request_Details_title">Talep Detayları</string>
    <string name="reject">Red</string>
    <string name="accept">Kabul</string>
    <string name="reset_password">Parola Sıfırla</string>
    <string name="pending_requests">Bekleyen Talepler</string>
    <string name="notification_message">Bildirim Mesajı</string>
    <string name="notifications_title">Bildirimler</string>

</resources>