<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="262dp"
        android:layout_height="254dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/loginLogo"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="248dp"
        android:layout_height="42dp"
        android:singleLine="true"
        android:hint="@string/enter_email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="248dp"
        android:layout_height="42dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/grey"
        android:text="@string/reset_password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>